--- a/Presentazione/presentazione.tex
+++ b/Presentazione/presentazione.tex
@@ -452,15 +452,10 @@ $$
 \item
 Tramite $\Cal R$ si stabilisce se un sottoinsieme $Y \subset X$ è contenuto in un solo dominio $\Omega_j$.
 
-\medskip
+\bigskip
 
 \item
-Procedendo con successive analisi locali si  estende l’insieme di nodi fino ad includere tutti i punti $X_j\subset\Omega_j$.
-
-\medskip
-
-\item
-Quando $\Cal R(Y, f(Y)) = -1$, si utilizza $\widetilde{\bm Q}$ per capire quali punti rimuovere, poiché  appartenenti ad un differente  sottodominio .
+Quando $\Cal R(Y, f(Y)) = -1$, si utilizza $\widetilde{\bm Q}$ per capire quali punti appartengono ad un differente  sottodominio .
 \end{itemize}
 \end{frame}
 
