More appropriate lineskip

--- a/introduction.tex
+++ b/introduction.tex
@@ -58,7 +58,7 @@ This model is trained with the  previously determined subsets~$X_j$ of data site
 
 
 The thesis is structured as follows:
-\begitems\vskip\parskip
+\begitems%\vskip\parskip
 * Chapter 1---Kernel-based interpolation.  This first chapter serves to introduce the scattered interpolation problem and to show how it can be solved by using kernel techniques. In particular we talk about positive definite functions, their associated native spaces, and error estimates.
 * Chapter 2---Data classification.  Here is where we build the vectors $\Bm U$ and~$\Bm Q$ and the regularity classifier.  We first show that there is a way to efficiently compute~$\Bm U$, then prove certain properties of invariance satisfied by~$\Bm Q\.$, and finally provide some examples.
 * Chapter 3---Discontinuities detection and reconstruction. In this last chapter we describe both phases of our technique to recover a non-regular function from scattered data, and show some examples.
