--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,8 @@
 \fontfam[EBGaramond]
 \fontfam[TypewriterMT]
 \BaskervilleMT
-\typosize[12.27/14.63]
+%\typosize[12.27/14.63]
+\typosize[12.27/14.5]
 \load[patches, garamond-math-fix, micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
